--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -4,6 +4,9 @@
 
     </head>
     <body>
-        <h1>예지꺼란다</h1>
+        <h1>
+            예은예은예은예은
+            요즘 다들 뭐하고 지내시나요 벌써 8월 중반 ㅠㅠ 수강신청 올클 기원
+        </h1>
     </body>
 </html>
