--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -1,23 +1,14 @@
-<!doctype html>
-<html>
+{% extends 'base.html' %}
+{% block content %}
+    <!DOCTYPE html>
+    <html lang="en">
     <head>
-
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>푸드림</title>
     </head>
     <body>
-
-        <h1>나는 멋쟁쓰 걸이다</h1>
-
-        <h1>
-            예은예은예은예은
-            요즘 다들 뭐하고 지내시나요 벌써 8월 중반 ㅠㅠ 수강신청 올클 기원
-        </h1>
-
-
-        <h1>민지꺼란다</h1>
-        <h2> 으악</h2>
-
-        <h1>승연꺼란다</h1>
-
-
+        <h1>홈화면</h1>
     </body>
-</html>
+    </html>
+{% endblock%}
