--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -25,16 +25,23 @@
             <li class="nav-item active">
               <a class="nav-link" href="#">동네마트 <span class="sr-only">(current)</span></a>
             </li>
-
+            
             <li class="nav-item active">
-              <a class="nav-link" href="#">마이페이지 <span class="sr-only">(current)</span></a>
+                <!-- <a href="/accounts/logout">로그아웃<span class="sr-only">(current)</span></a> -->
+                <a class="nav-link" href="">기부하기 <span class="sr-only">(current)</span></a>
+            </li>
+              
+            <li class="nav-item active">
+                <!-- <a href="/accounts/logout">로그아웃<span class="sr-only">(current)</span></a> -->
+                <a class="nav-link" href="#">마이페이지 <span class="sr-only">(current)</span></a>
             </li>
 
-            <li class="nav-item active">
+             <li class="nav-item active">
                 <!-- <a href="/accounts/logout">로그아웃<span class="sr-only">(current)</span></a> -->
                 <a class="nav-link" href="/accounts/logout">로그아웃 <span class="sr-only">(current)</span></a>
             </li>
   
+
            </ul>
             <form class="form-inline">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
