--- a/social/templates/signin.html
+++ b/social/templates/signin.html
@@ -30,7 +30,7 @@
     <div class="container">
         <center>
             <img src="{% static 'img/example.png' %}" width=50 alt="로고 자리" title="로고 자리" id=logo><br>
-            <h1>소셜 로그인</h1>
+            <h1>푸드림 로그인</h1>
 
             {% if messages %}
             <div class="alert alert-primary">
