--- a/upload/templates/detail.html
+++ b/upload/templates/detail.html
@@ -1,25 +1,53 @@
+{% extends 'base.html' %}
+
 <!DOCTYPE html>
 <html>
 {% block content %}
     <head>
-        
+        <style>
+            #detail
+            {
+                border: 1px solid black;
+            }
+            .photo
+            {
+                width : 200px;
+                height : 200px;
+            }
+            
+            .wish
+            {
+                position:absolute;
+                left:50%;
+            }
+        </style>
     </head>
     <body>
-        <div class ="container">
-            <p>제목 {{form.title}}</p>
-            <p> 이름 {{form.name}}</p>
-            식품사진<p><img src ={{form.photo.url}}></p>
-            <p> 설명 {{form.explain}}</p>
-            <p>거래방법 {{form.deal_method}}</p>
-            <p>유통기한 <img src = {{form.deadline.url}}></p>
-            <p>가격 {{form.price}}</p>
-            <p>거래장소 {{form.location}}</p>
+        판매 페이지
+        <div class ="container" id="detail">
+            <p>제목: {{form.title}}</p>
+            <p>이름: {{form.name}}</p>
+            <p>식품사진:<img class = "photo" src ={{form.photo.url}}></p>
+            <p>설명: {{form.explain}}</p>
+            <p>거래방법: {{form.deal_method}}</p>
+            <p>유통기한: <img class = "photo" src = {{form.deadline.url}}></p>
+            <p>가격: {{form.price}}</p>
+            <p>거래장소: {{form.location}}</p>
+        </div><br>
+
+        <!--장바구니-->
+        <div class = "wish">
+            <a class="btn btn-secondary" href="{% url 'cart:add_cart' form.id %}"> 위시리스트</a>
+        </div>
+        <br> <br> <br>
+        <div>
+
+            {% load disqus_tags %}
+            {% disqus_show_comments %}
 
         </div>
-    
+
         
-    
-      
     </body>
     </html>
 {% endblock %}
