--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -10,6 +10,36 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </head>
 <body>
+  <style>
+  .btn_like{
+    display: inline-block;
+    width : 50px;
+    height: 50px; 
+    background:url({% static 'img/instagramicon.png' %});
+    background-position: -100px -400px; 
+    text-indent: -9999px;
+    overflow:hidden;
+    border:none;
+  }
+  .btn-like.active{
+    display: inline-block;
+      width: 50px;
+      height: 50px;
+      background:url({% static 'img/instagramicon.png' %});
+      background-position: -100px -400px; 
+      text-indent: -9999px;
+      overflow:hidden;
+      border:none;
+  }
+  footer {
+              display: flex;
+              justify-content: center;
+              padding: 5px;
+              background-color: lightgray;
+              color: #fff;
+          }
+        
+  </style>
     <nav class="navbar navbar-expand-lg navbar-light bg-warning">
         <a href="{% url 'home' %}"><img src="{% static 'img/example.png' %}"  width=50 alt="로고 자리" title="로고 자리"></a><br>
         
@@ -19,7 +49,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" href="#">식재료직거래 <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/list">식재료직거래 <span class="sr-only">(current)</span></a>
             </li>
 
             <li class="nav-item active">
@@ -28,12 +58,12 @@
             
             <li class="nav-item active">
                 <!-- <a href="/accounts/logout">로그아웃<span class="sr-only">(current)</span></a> -->
-                <a class="nav-link" href="">기부하기 <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/mileage/1">기부하기 <span class="sr-only">(current)</span></a>
             </li>
               
             <li class="nav-item active">
                 <!-- <a href="/accounts/logout">로그아웃<span class="sr-only">(current)</span></a> -->
-                <a class="nav-link" href="#">마이페이지 <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/mypage">마이페이지 <span class="sr-only">(current)</span></a>
             </li>
 
              <li class="nav-item active">
@@ -51,6 +81,8 @@
         </div>
       </nav>
       {% block content %} <!--home.html 내용이 들어올 자리에 이렇게 작성-->
+      
       {% endblock %}
+     
 </body>
 </html>
